5.14.12 breaks graphics on an Intel GM45 laptop
This is a continuation of the thread in https://lkml.org/lkml/2021/10/15/120.
Hello,
Kernel 5.14.12 breaks GPU support on an Dell Satellite E6500 laptop with GM45 integrated graphics. The screen does not update after the i965 module gets loaded. Same problem happens on 5.15.0-rc5. [...] The most likely culprit is "drm/i915/tc: Fix TypeC port init/resume time sanitization", so I'm CCing its authors. I'll test tomorrow with this patch reverted. Please excuse me for writing this in HTML format, but my main machine is temporarily broken.